[feat] model_form에서 save 버튼을 눌렀을 때 DB에 저장되고 model_list로 돌아오는 로직 추가

--- a/myMovieReviews/static/css/styles.css
+++ b/myMovieReviews/static/css/styles.css
@@ -57,6 +57,7 @@ footer {
 .btn-primary {
     background-color: #ff4d4d;
     border: none;
+    margin-left: 88%;
 }
 
 .btn-primary:hover {
@@ -96,6 +97,10 @@ form button {
     width: auto;
     padding: 10px 20px;
     font-size: 1rem;
+}
+
+.my-5 > h2 {
+    text-align: center;
 }
 
 /* 영화 상세 페이지 스타일 */
