--- a/myMovieReviews/static/css/styles.css
+++ b/myMovieReviews/static/css/styles.css
@@ -4,7 +4,8 @@ body {
     line-height: 1.6;
     margin: 0;
     padding: 0;
-    background-color: #f8f9fa;
+    /* background-color: #f8f9fa; */
+    background-color: #fff;
 }
 
 /* Navbar 스타일 */
@@ -51,6 +52,15 @@ footer {
     border-top-right-radius: 10px;
     height: 200px;
     object-fit: cover;
+}
+
+.card-body {
+    flex: 1 1 auto;
+    padding: var(--bs-card-spacer-y) var(--bs-card-spacer-x);
+    color: var(--bs-card-color);
+    background-color: #f8f9fa;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
 }
 
 /* 버튼 스타일 */
@@ -104,21 +114,99 @@ form button {
 }
 
 /* 영화 상세 페이지 스타일 */
+/* 기본 컨테이너 설정 */
 .movie-detail {
     display: flex;
     flex-wrap: wrap;
     gap: 20px;
     align-items: flex-start;
+    flex-direction: column;
 }
 
-.movie-detail img {
-    max-width: 300px;
+.detail-top {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+/* 제목 스타일 */
+.movie-detail h1 {
+    font-size: 2.5rem;
+    font-weight: bold;
+    text-align: left;
+}
+
+.detail-top .btn-warning {
+    background-color: #fff;
+    color: gray;
+    border: none;
+    font-size: 0.9rem;
+    padding: 8px 12px;
+    border-radius: 5px;
+    transition: background-color 0.3s ease;
+}
+
+.detail-top .btn-danger {
+    background-color: #fff;
+    color: gray;
+    border: none;
+    font-size: 0.9rem;
+    padding: 8px 12px;
+    border-radius: 5px;
+    transition: background-color 0.3s ease;
+}
+
+/* 영화 정보 스타일 */
+.detail-center {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    background-color: #f8f9fa;
+    padding: 10px;
+}
+
+/* 이미지 스타일 */
+.movie-detail img.img-fluid {
+    width: 20%;
+    height: auto;
+    max-height: 300px;
+    object-fit: cover;
+    margin-bottom: 20px;
     border-radius: 10px;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
 }
 
-.movie-detail p {
-    margin: 0 0 10px;
+.movie-info {
+    width: 80%;
+    padding: 20px;
+    box-sizing: content-box;
+}
+
+.movie-info p:last-child {
+    margin-bottom: 0;
+}
+
+/* 텍스트 스타일 */
+.movie-detail > p {
+    width: 100%;
+    font-size: 1rem;
+    line-height: 1.6;
+    background-color: #f8f9fa;
+    padding: 20px;
+}
+
+/* 텍스트 강조 스타일 */
+.movie-detail p strong {
+    font-weight: bold;
+    margin-right: 10px;
+    color: #333;
+}
+
+/* 영화 리뷰 텍스트 스타일 */
+.movie-detail > p {
+    font-size: 1.1rem;
+    color: #555;
+    text-align: justify;
 }
 
 /* 반응형 스타일 */
