--- a/myMovieReviews/templates/movie/movie_form.html
+++ b/myMovieReviews/templates/movie/movie_form.html
@@ -7,35 +7,35 @@
     <form method="POST">
         {% csrf_token %}
         <div class="mb-3">
-            <label for="{{ form.title.id_for_label }}" class="form-label">{{ form.title.label }}</label>
+            <label for="{{ form.title.id_for_label }}" class="form-label">제목</label>
             {{ form.title }}
         </div>
         <div class="mb-3">
-            <label for="{{ form.release_year.id_for_label }}" class="form-label">{{ form.release_year.label }}</label>
+            <label for="{{ form.release_year.id_for_label }}" class="form-label">개봉년도</label>
             {{ form.release_year }}
         </div>
         <div class="mb-3">
-            <label for="{{ form.genre.id_for_label }}" class="form-label">{{ form.genre.label }}</label>
+            <label for="{{ form.genre.id_for_label }}" class="form-label">장르</label>
             {{ form.genre }}
         </div>
         <div class="mb-3">
-            <label for="{{ form.rating.id_for_label }}" class="form-label">{{ form.rating.label }}</label>
+            <label for="{{ form.rating.id_for_label }}" class="form-label">별점</label>
             {{ form.rating }}
         </div>
         <div class="mb-3">
-            <label for="{{ form.runtime.id_for_label }}" class="form-label">{{ form.runtime.label }}</label>
+            <label for="{{ form.runtime.id_for_label }}" class="form-label">러닝타임</label>
             {{ form.runtime }}
         </div>
         <div class="mb-3">
-            <label for="{{ form.review.id_for_label }}" class="form-label">{{ form.review.label }}</label>
+            <label for="{{ form.review.id_for_label }}" class="form-label">리뷰</label>
             {{ form.review }}
         </div>
         <div class="mb-3">
-            <label for="{{ form.director.id_for_label }}" class="form-label">{{ form.director.label }}</label>
+            <label for="{{ form.director.id_for_label }}" class="form-label">감독</label>
             {{ form.director }}
         </div>
         <div class="mb-3">
-            <label for="{{ form.actors.id_for_label }}" class="form-label">{{ form.actors.label }}</label>
+            <label for="{{ form.actors.id_for_label }}" class="form-label">배우</label>
             {{ form.actors }}
         </div>
         <button type="submit" class="btn btn-primary">Save</button>
