--- a/myMovieReviews/templates/movie/movie_list.html
+++ b/myMovieReviews/templates/movie/movie_list.html
@@ -1,4 +1,5 @@
 {% extends "base/base.html" %}
+{% load static %}
 
 {% block content %}
 <div class="container">
@@ -8,11 +9,14 @@
             <div class="card mb-4">
                 <img src="{{ movie.image_url }}" class="card-img-top" alt="{{ movie.title }}">
                 <div class="card-body">
-                    <h5 class="card-title">{{ movie.title }}</h5>
+                    <h5 class="card-title">
+                        <a href="{% url 'movie:movie_detail' movie.id %}" class="text-decoration-none">
+                            {{ movie.title }}
+                        </a>
+                    </h5>
                     <p class="card-text">개봉년도: {{ movie.release_year }}</p>
                     <p class="card-text">장르: {{ movie.genre }}</p>
                     <p class="card-text">별점: {{ movie.rating }}</p>
-                    <a href="{% url 'movie:movie_detail' movie.id %}" class="btn btn-secondary btn-sm">View</a>
                 </div>
             </div>
         </div>
