--- a/SWIDEA_SITE/templates/ideas/idea_create.html
+++ b/SWIDEA_SITE/templates/ideas/idea_create.html
@@ -5,7 +5,7 @@
 {% block title %}아이디어 등록{% endblock %}
 
 {% block extra_css %}
-<link rel="stylesheet" href="{% static 'css/register.css' %}">
+<link rel="stylesheet" href="{% static 'css/create.css' %}">
 {% endblock %}
 
 {% block content %}
