--- a/SWIDEA_SITE/static/css/list.css
+++ b/SWIDEA_SITE/static/css/list.css
@@ -1,23 +1,25 @@
 /* 메인 섹션 스타일 */
 main {
-    padding: 2rem;
+    margin: 3rem 10rem;
+    padding: 1rem 5rem;
+    box-sizing: content-box;
+    background-color: rgba(150, 150, 150, 0.9);
 }
 
 /* 제목과 설명 */
 .idea-list-header {
     text-align: center;
-    margin-bottom: 2rem;
 }
 
 .idea-list-header h1 {
     font-size: 2rem;
-    color: #333;
+    color: #ffff66;
     margin-bottom: 0.5rem;
 }
 
 .idea-list-header p {
     font-size: 1rem;
-    color: #666;
+    color: #fff;
 }
 
 /* 정렬 버튼 */
@@ -86,6 +88,7 @@ main {
     padding: 1rem;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     transition: transform 0.3s, box-shadow 0.3s;
+    max-width: 30rem;
 }
 
 .idea-card:hover {
