--- a/SWIDEA_SITE/templates/ideas/idea_list.html
+++ b/SWIDEA_SITE/templates/ideas/idea_list.html
@@ -31,7 +31,7 @@
       {% if idea.image != null and idea.image.url != "" %}
         <img src="{{ idea.image.url }}" alt="대체 텍스트" />     
       {% else %}
-        <img src="{% static 'ideas/image/no_img.png' %}" alt="대체 텍스트" />     
+        <img src="{% static 'image/no_img.png' %}" alt="대체 텍스트" />     
       {% endif %}
       <div class="idea-content">
         <a class="title" href="{% url 'ideas:idea_detail' idea.pk %}">
