--- a/SWIDEA_SITE/templates/ideas/idea_detail.html
+++ b/SWIDEA_SITE/templates/ideas/idea_detail.html
@@ -2,7 +2,7 @@
 
 {% load static %}
 
-{% block title %}아이디어 관리{% endblock %}
+{% block title %}아이디어 디테일{% endblock %}
 
 {% block extra_css %}
 <link rel="stylesheet" href="{% static 'css/detail.css' %}">
