--- a/SWIDEA_SITE/templates/ideas/idea_detail.html
+++ b/SWIDEA_SITE/templates/ideas/idea_detail.html
@@ -28,7 +28,7 @@
             <h1>{{ idea.title }}</h1>
             <p>1&#41; 아이디어 관심도<br>{{ idea.interest }}</p>
             <p>2&#41; 예상 개발 툴<br>{{ idea.devtool }}</p>
-            <p>3&#41; 아이디어 설명<br>{{ idea.id }} 번째 아이디어입니다.</p>
+            <p>3&#41; 아이디어 설명<br>{{ idea.content }}</p>
         </div>
     </div>
     <div class="idea-detail-bottom">
