--- a/SWIDEA_SITE/templates/base.html
+++ b/SWIDEA_SITE/templates/base.html
@@ -7,6 +7,7 @@
     <title>{% block title %}My SW Idea Manage{% endblock %}</title>
     <link rel="stylesheet" href="{% static 'css/reset.css' %}">
     <link rel="stylesheet" href="{% static 'css/main.css' %}">
+    <link rel="icon" href="{% static 'favicon_io/favicon.ico' %}">
     {% block extra_css %}{% endblock %}
 </head>
 <body>
