--- a/SWIDEA_SITE/templates/devtools/dev_list.html
+++ b/SWIDEA_SITE/templates/devtools/dev_list.html
@@ -31,4 +31,10 @@
 {% endfor %}
 <hr/>
 
+<div class="pagination">
+    <a href="?page=1">1</a>
+    <a href="?page=2">2</a>
+    <a href="?page=3">3</a>
+</div>
+
 {% endblock %}
