--- a/SWIDEA_SITE/templates/ideas/idea_list.html
+++ b/SWIDEA_SITE/templates/ideas/idea_list.html
@@ -29,11 +29,14 @@
     {% for idea in ideas %}
       {% if idea.pk %}
       <div class="idea-card">      
-        {% if idea.image != null and idea.image.url != "" %}
-          <img src="{{ idea.image.url }}" alt="대체 텍스트" />     
-        {% else %}
-          <img src="{% static 'image/no_img.png' %}" alt="대체 텍스트" />     
-        {% endif %}
+        <div class="idea-image">
+          {% if idea.image != null and idea.image.url != "" %}
+            <img src="{{ idea.image.url }}" alt="{{ idea.title }}" />
+            <button class="star-icon {% if idea.id in starred_ideas %}active{% endif %}" data-url="{% url 'ideas:toggle_star' idea.pk %}">★</button>
+          {% else %}
+            <img src="{% static 'image/no_img.png' %}" alt="대체 텍스트" />
+          {% endif %}
+        </div>
         <div class="idea-content">
           <a class="title" href="{% url 'ideas:idea_detail' idea.pk %}">
           {% comment %} 타이틀 클릭 시 상세 페이지로 이동 {% endcomment %}
@@ -64,8 +67,32 @@
 
 {% block ajax_js %}
 <script>
-  const csrfToken = '{{ csrf_token }}';
-  // 모든 관심도 버튼에 이벤트 리스너 추가
+  const csrfToken = '{{ csrf_token }}'; // CSRF 토큰 가져오기
+
+  // 별 모양 클릭 시 AJAX 요청
+  document.querySelectorAll('.star-icon').forEach(star => {
+    star.addEventListener('click', function () {
+        const url = this.getAttribute('data-url'); // 버튼의 data-url 속성 값 가져오기
+
+        fetch(url, {
+            method: 'POST',
+            headers: {
+                'X-CSRFToken': csrfToken, // CSRF 토큰 추가
+            }
+        })
+        .then(response => response.json())
+        .then(data => {
+            if (data.success) {
+                this.classList.toggle('active'); // 활성화 상태 토글
+            } else {
+                console.error('Error toggling star:', data.error);
+            }
+        })
+        .catch(error => console.error('Error:', error));
+    });
+  });
+
+  // 관심도 버튼 클릭 시 AJAX 요청
   document.querySelectorAll('.btn-interest').forEach(button => {
       button.addEventListener('click', function (e) {
           e.preventDefault(); // 기본 동작(페이지 이동) 막기
