--- a/piro22_Ajax_Pirostagram/server/static/css/posts.css
+++ b/piro22_Ajax_Pirostagram/server/static/css/posts.css
@@ -49,3 +49,18 @@ body > div > main > section.posts > nav > div.posts__tab > img {
 .insta_rill {
   filter: invert(100%) sepia(9%) saturate(5193%) hue-rotate(253deg) brightness(114%) contrast(107%); 
 }
+
+/* Reset styles for <a> tags inside .posts__photo */
+.posts__photo a {
+  display: block; /* Ensure the <a> tag takes the full width and height of its container */
+  width: 100%;
+  height: 100%;
+  text-decoration: none; /* Remove underline from links */
+  color: inherit; /* Inherit text color from parent */
+}
+
+.posts__photo a > img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover; /* Ensure the image retains the desired appearance */
+}
