--- a/piro22_Ajax_Pirostagram/server/templates/home/main.html
+++ b/piro22_Ajax_Pirostagram/server/templates/home/main.html
@@ -143,34 +143,9 @@
           </nav>
           <article class="posts__contents">
             <div class="posts__photo">
-              <img src="https://picsum.photos/seed/picsum1/200/300" alt="" />
-            </div>
-            <div class="posts__photo">
-              <img src="https://picsum.photos/seed/picsum1/200/300" alt="" />
-            </div>
-            <div class="posts__photo">
-              <img src="https://picsum.photos/seed/picsum1/200/300" alt="" />
-            </div>
-            <div class="posts__photo">
-              <img src="https://picsum.photos/seed/picsum1/200/300" alt="" />
-            </div>
-            <div class="posts__photo">
-              <img src="https://picsum.photos/seed/picsum1/200/300" alt="" />
-            </div>
-            <div class="posts__photo">
-              <img src="https://picsum.photos/seed/picsum1/200/300" alt="" />
-            </div>
-            <div class="posts__photo">
-              <img src="https://picsum.photos/seed/picsum1/200/300" alt="" />
-            </div>
-            <div class="posts__photo">
-              <img src="https://picsum.photos/seed/picsum1/200/300" alt="" />
-            </div>
-            <div class="posts__photo">
-              <img src="https://picsum.photos/seed/picsum1/200/300" alt="" />
-            </div>
-            <div class="posts__photo">
-              <img src="https://picsum.photos/seed/picsum1/200/300" alt="" />
+              <a href="/posts"> <!-- 클릭 시 이동할 URL -->
+                <img src="{% static 'images/pirogramming.jpeg' %}" alt="Post image" />
+              </a>
             </div>
           </article>
         </section>
@@ -180,32 +155,32 @@
          <button class="navBar">
           <img
             src={%static 'icons/home.png' %}
-            alt="하이라이트 보기"
+            alt="홈 화면"
           />
          </button>
          <button class="navBar">
           <img
             src={%static 'icons/magnifying-glass.png' %}
-            alt="하이라이트 보기"
+            alt="돋보기"
           />
          </button>
          <button class="navBar">
           <img
             class = 'insta_rill'
             src={%static 'icons/insta-rill.png' %}
-            alt="하이라이트 보기"
+            alt="인스타 릴"
           />
          </button>
          <button class="navBar">
           <img
             src={%static 'icons/shopping.png' %}
-            alt="하이라이트 보기"
+            alt="쇼핑"
           />
          </button>
          <button class="navBar navBar--selected">
           <img
             src={%static 'icons/user.png' %}
-            alt="하이라이트 보기"
+            alt="유저"
           />
          </button>
       </footer>
